# FileFlash-Bridge

./: .eslintrc.js  .gitignore  App.tsx  README.en.md  README.md  app.json  harmony-release.local.example.json  index.js  jest.config.js  metro.config.js  package-lock.json  package.json  react-native.config.js  tsconfig.json
.claude/: settings.local.json
.github/workflows/: android-release.yml  ios-ci.yml  ios-testflight.yml
__tests__/: App.test.tsx  deviceState.test.ts  harmonyPlatformAdapters.test.ts  networkResolver.test.ts  portalDocument.test.ts  reactNativeAdapters.test.ts  reactNativeHttpRuntime.test.ts  reactNativeTcpHttpRuntime.test.ts  storageGateway.test.ts  transferServiceController.test.ts
android/: build.gradle  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/jni/: CMakeLists.txt
android/app/src/main/res/values/: strings.xml
config/: harmony-release.local.example.json
docs/: android-wireless-debugging.md  github-actions-android-release.en.md  github-actions-android-release.md  github-actions-ios-ci.md  github-actions-ios-testflight.md  harmony-local-release.md  harmonyos-porting.md  privacy-policy-zh.md  zhihu-article.md
harmony/: .gitignore  README.md  build-profile.template.json5  oh-package-lock.json5  oh-package.json5
harmony/AppScope/: app.json5
harmony/AppScope/resources/base/element/: string.json
harmony/entry/: build-profile.json5  oh-package.json5
harmony/entry/src/main/: module.json5
harmony/entry/src/main/cpp/: CMakeLists.txt  FPFileAccess.cpp  FPFileAccess.h  FPFileAccessPackage.h  FPStaticServer.cpp  FPStaticServer.h  FPStaticServerPackage.h  PackageProvider.cpp
harmony/entry/src/main/ets/: .gitignore  PackageProvider.ets
harmony/hvigor/: hvigor-config.json5
ios/: Podfile
ios/FileFlashBridge/: AppDelegate.swift  FPDeviceState.m  FPFileReader.m  FPInboundSharing.m  FileFlashBridge-Bridging-Header.h  Info.plist  LaunchScreen.storyboard
ios/FileFlashBridge.xcodeproj/: project.pbxproj
ios/FileFlashBridge.xcodeproj/xcshareddata/xcschemes/: FileFlashBridge.xcscheme
ios/FileFlashBridge.xcworkspace/: contents.xcworkspacedata
ios/FileFlashBridge/Images.xcassets/AppIcon.appiconset/: Contents.json
ios/FileFlashShareExtension/: FileFlashShareExtension.entitlements  Info.plist  ShareViewController.h  ShareViewController.m
openspec/: config.yaml
openspec/changes/add-guided-onboarding-tour/: proposal.md  tasks.md
openspec/changes/add-guided-onboarding-tour/specs/local-transfer-server/: spec.md
openspec/changes/add-project-history-drawer/: design.md  proposal.md  tasks.md
openspec/changes/add-project-history-drawer/specs/local-transfer-server/: spec.md
openspec/changes/archive/2026-04-14-launch-fileflash-bridge-v1/: proposal.md  tasks.md
openspec/changes/archive/2026-04-15-add-project-history-drawer/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-22-compact-workbench-layout/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-22-refresh-paper-ui-apple-style/: design.md  proposal.md
openspec/changes/archive/2026-04-24-add-guided-onboarding-tour/: design.md  tasks.md
openspec/changes/archive/2026-04-28-add-i18n-settings-tab/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-13-fix-harmony-file-access-module/: design.md  proposal.md  tasks.md
openspec/changes/fix-harmony-browser-transfer-stall/: design.md  proposal.md  tasks.md
openspec/changes/fix-harmony-browser-transfer-stall/specs/local-transfer-server/: spec.md
openspec/changes/fix-harmony-browser-transfer-stall/specs/web-transfer-portal/: spec.md
openspec/changes/launch-fileflash-bridge-v1/: design.md  proposal.md  tasks.md
openspec/changes/launch-fileflash-bridge-v1/specs/local-transfer-server/: spec.md
openspec/changes/launch-fileflash-bridge-v1/specs/transfer-security-controls/: spec.md
openspec/changes/launch-fileflash-bridge-v1/specs/web-transfer-portal/: spec.md
openspec/changes/refresh-paper-ui-apple-style/: tasks.md
openspec/specs/app-language-preferences/: spec.md
openspec/specs/harmony-file-access-bridge/: spec.md
openspec/specs/local-transfer-server/: spec.md
openspec/specs/mobile-tab-navigation/: spec.md
openspec/specs/transfer-security-controls/: spec.md
openspec/specs/web-transfer-portal/: spec.md
openspec/specs/workspace-visual-refresh/: spec.md
patches/: react-native-document-picker+9.3.1.patch  react-native-static-server+0.5.0.patch
scripts/: build-android-release-artifacts.mjs  build-harmony-release.mjs  configure-harmony-project.mjs  ensure-harmony-build-profile.mjs  ensure-harmony-bundle-fresh.mjs  generate-app-icons.mjs  generate-harmony-icon.mjs  harmony-doctor.mjs  harmony-local-release-config.mjs  harmonySdk.mjs  patch-harmony-react-native-fs.mjs  patch-harmony-react-native-tcp-socket.mjs  release-harmony-local.mjs  run-harmony.mjs
src/app/: AppShell.tsx  appShellStyles.ts  paperTheme.ts  theme.ts  ui.tsx  useAppModel.ts  useDemoAppModel.ts  workspaceOnboarding.tsx  workspaceTypes.ts
src/app/components/: PlatformQrCode.android.tsx  PlatformQrCode.harmony.tsx  PlatformQrCode.tsx
src/app/icons/: AppIcons.android.tsx  AppIcons.harmony.tsx  AppIcons.tsx
src/app/navigation/: AppBottomTabBar.tsx
src/app/screens/: HomeScreen.tsx  SettingsScreen.tsx
src/modules/file-access/: inboundStorageGateway.ts  reactNativeAdapters.ts
src/modules/localization/: i18n.tsx
src/modules/onboarding/: models.ts
src/modules/portal/: portalDocument.ts  portalTheme.ts
src/modules/security/: accessControl.ts
src/modules/service/: models.ts  netInfoNetworkProvider.ts  networkResolver.ts  reactNativeHttpRuntime.ts  reactNativeTcpHttpRuntime.ts  transferServiceController.ts
src/platform/: clipboard.ts  deviceState.ts  documentPicker.harmony.ts  documentPicker.ohos.ts  documentPicker.ts  fileAccess.ts  networkProvider.ts  platform.ts  serviceRuntime.harmony.ts  serviceRuntime.ts  transferLimits.harmony.ts  transferLimits.ts
src/test-support/: node.ts
(+27 files in other folders)
